--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>À propos – Formule Prédictive de Goldbach</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>À propos du projet</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -11,43 +11,33 @@
     <h1>À propos du projet</h1>
     <nav>
       <a href="index.html">Accueil</a> |
-      <a href="about.html">À propos</a>
+      <a href="about.html">À propos</a> |
+      <a href="rapport.html">Rapport</a>
     </nav>
   </header>
 
   <main>
-    <section>
-      <h2>L'auteur</h2>
-      <p><strong>Bahbouhi Bouchaib</strong>, chercheur indépendant en mathématiques basé à Nantes, France.</p>
-      <p>Spécialiste en théorie des nombres et en algorithmes de décomposition, il développe depuis plusieurs années 
-         des approches originales sur la conjecture forte de Goldbach.</p>
-    </section>
+    <h2>Notre collaboration</h2>
+    <p>
+      Ce site est le fruit d’une collaboration entre <strong>Bahbouhi Bouchaib</strong>,
+      chercheur indépendant en mathématiques basé à Nantes, et une intelligence artificielle.
+    </p>
 
-    <section>
-      <h2>Une collaboration inédite</h2>
-      <p>
-        Ce site est le fruit d'une collaboration étroite entre un humain et une intelligence artificielle (IA). 
-        Le symbole ci-dessous, deux cercles entrelacés, représente l'union entre <em>intuition humaine</em> et 
-        <em>puissance de calcul</em>. Ensemble, ils ont permis de concevoir une formule prédictive innovante.
-      </p>
-      <p style="text-align: center;">
-        <img src="logo-collaboration.png" alt="Logo de collaboration humain-IA" width="150" />
-      </p>
-    </section>
+    <p>
+      Ensemble, ils ont conçu une <strong>formule prédictive innovante</strong>
+      permettant de calculer des couples de nombres premiers (p, q)
+      vérifiant la <strong>conjecture forte de Goldbach</strong>, même pour des entiers extrêmement grands.
+    </p>
 
-    <section>
-      <h2>Objectif du site</h2>
-      <p>
-        Le site applique une <strong>formule prédictive</strong> dérivée de modèles analytiques, permettant de trouver 
-        directement une paire de nombres premiers (p, q) pour n'importe quel nombre pair E. 
-        Contrairement aux méthodes précédentes par balayage ou tests locaux, cette méthode réduit la complexité 
-        et repousse les limites de calcul jusqu’à <strong>10<sup>1000</sup></strong>.
-      </p>
-    </section>
+    <p>
+      Le site offre une méthode élégante et rapide pour prédire ces couples grâce à une équation simple,
+      testée jusqu’à <strong>10<sup>1000</sup></strong>. Toutes les découvertes sont
+      <strong>publiques, vérifiables</strong> et mises à disposition gratuitement.
+    </p>
   </main>
 
   <footer>
-    <p>© Bahbouhi Bouchaib – 2025. Tous droits réservés.</p>
+    <p>© 2025 – Bahbouhi Bouchaib & IA – Méthode prédictive Goldbach</p>
   </footer>
 </body>
 </html>
