--- a/index.html
+++ b/index.html
@@ -2,32 +2,29 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Formule Prédictive de Goldbach</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Formule Prédictive de Goldbach</h1>
-    <nav>
-      <a href="index.html">Accueil</a>
-      <a href="about.html">À propos</a>
-      <a href="rapport.html">Rapport</a>
-    </nav>
-  </header>
+  <h1>Formule Prédictive de Goldbach</h1>
 
-  <main>
-    <h2>Entrez un nombre pair E (≥ 4)</h2>
-    <input type="number" id="evenNumber" placeholder="Ex: 128">
-    <button onclick="calculer()">Calculer</button>
+  <nav>
+    <a href="index.html">Accueil</a> |
+    <a href="about.html">À propos</a> |
+    <a href="rapport.html">Rapport</a>
+  </nav>
 
-    <div id="result"></div>
-  </main>
+  <h2>Entrez un nombre pair E (≥ 4)</h2>
+  <input type="number" id="evenNumber" placeholder="Ex: 128">
+  <button onclick="calculer()">Calculer</button>
+
+  <div id="result"></div>
 
   <footer>
     <p>© 2025 Bouchaib Bouchaib — Tous droits réservés.</p>
   </footer>
 
-  <!-- Appel correct du script -->
   <script src="script.js"></script>
 </body>
 </html>
