--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <div class="container">
     <h1>Formule Prédictive de Goldbach</h1>
     <p>Entrez un nombre pair très grand :</p>
-    <input type="text" id="evenNumber" placeholder="Exemple : 1000000000000" />
+    <input type="text" id="inputE" placeholder="Exemple : 1000000000000" />
     <button onclick="calculer()">Calculer</button>
-    <div id="result"></div>
+    <div id="resultat"></div>
   </div>
 
   <script src="script.js"></script>
